# Algernon

./: LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
sampledata/: 500+ awesome bookmarks for Data Science  Machine Learning by Udit Ranjan Towards Data Science.json  Bookmarks to the selected Deep Learning _ Machine Learning Resources on the Web by Murat Karakaya Deep Learning Tutorials with Keras Medium.json  bookmarks.json  extract-bookmarks.ipynb  tagging.ipynb  tags.json
sampledata/html/: 500+ awesome bookmarks for Data Science  Machine Learning by Udit Ranjan Towards Data Science.html  Bookmarks to the selected Deep Learning _ Machine Learning Resources on the Web by Murat Karakaya Deep Learning Tutorials with Keras Medium.html  huhu.json
src/algernon/api/: notify.py  tag.py  url.py  user.py
src/algernon/cli/: __main__.py  utils.py
src/algernon/cli/cmds/: hello.py
src/algernon/cli/cmds/db/: __init__.py  import_bookmarks.py  init.py  (+1 more)
src/algernon/common/: classmaps.py  const.py  dataclassutils.py  exc.py  security.py  utils.py
src/algernon/common/db/: __init__.py  algnuser.py  cstm.py  fetched.py  ormbase.py  parsed.py  tag.py  url.py  url2tag.py  utils.py
src/algernon/common/models/: __init__.py  dbnotification.py
src/algernon/fetcher/: __main__.py  abc.py  chrome.py  const.py  persisting.py  simple.py  worker.py
src/algernon/parser/: abc.py  exc.py  persisting.py  simple.py  tika.py  tikasrv.py
tests/: conftest.py
tests/fetcher/: test_parsing.py  test_persisting.py  test_simple.py
tests/fixtures/db/: algernondb.pgdump
(+10 files in other folders)
